Compilerbau/ue08/Recipes.atg
import java.util.ArrayList;
import java.util.HashMap;

COMPILER Recipes

abstract class Thing{
    public String name;
    public float getPrice();
}

class AtomicThing extends Thing{
    private final float price;
    public AtomicThing(float price){
        this.price = price;
    }
    @Override
    public float getPrice(){
        return price;
    }
}

class ComplexThing extends Thing{
    private final ArrayList<Thing> things = new ArrayList<>();
    private float price;
    public void addThing(Thing thing){
        things.add(thing);
    }
    @Override
    public float getPrice(){
        if (price == null){
            price = 0;
            for (Thing thing: things) {
                price += thing.getPrice();
            }
            price *= 1.2;
        }
        return price;
    }
}

HashMap<String,Thing> thingsMap = new HashMap<>();

CHARACTERS
	digit		= 	"0123456789".
    letter		= 	'a' .. 'z' + 'A' .. 'Z'.
	
TOKENS
	int = digit {digit}.
	float = digit {digit} "." digit {digit}.
	ident = letter {letter}.


COMMENTS FROM "##" TO "**" NESTED
COMMENTS FROM "//" TO "\n"

IGNORE "\r" + "\n" + "\t"

PRODUCTIONS
    Recipes = (Object<out Thing thing>              (.thingsMap.put(thing.name,thing);.)
               | Price)
               {(Object<out thing>                  (.thingsMap.put(thing.name,thing);.)
               | Price)}.
    Object<out Thing> = Atom<out Thing thing> | Complex<out thing> .
    Complex<out Thing> = ident                      (.ComplexThing ct = new ComplexThing();
                                                    ct.name = t.val;.)
                        "{" Object<out Thing thing> (.int times = 1;.)
                         ["x" int                   (.times = Integer.parseInt(t.val);.)
                         ]                          (.for(int i = 0; i< times;i++){
                                                        ct.addThing(thing);}.)
                        {"," Object<out thing>      (.int times = 1;.)
                        ["x" int                    (.times = Integer.parseInt(t.val);.)
                        ]                           (.for(int i = 0; i< times;i++){
                                                    ct.addThing(thing);}.)
                        } "}".
    Atom<out Thing> = "atom" ident                  (. String name = t.val; .)
                        ":" float                   (. AtomicThing at = new AtomicThing(t.val); at.name = name;.)
                        .
    Price = "priceof" ident                         (. String name = t.val;
                                                    Thing t = thingsMap.get(name);
                                                     if (t==null){
                                                        SemErr("Object "+name+" not found!");
                                                     } else {
                                                        System.out.println(name+": "+thing.getPrice());
                                                     }.)
             .
END Recipes.
