Compilerbau/ue08/Parser.java


import java.util.ArrayList;
import java.util.HashMap;



public class Parser {
	public static final int _EOF = 0;
	public static final int _int = 1;
	public static final int _float = 2;
	public static final int _ident = 3;
	public static final int maxT = 11;

	static final boolean _T = true;
	static final boolean _x = false;
	static final int minErrDist = 2;

	public Token t;    // last recognized token
	public Token la;   // lookahead token
	int errDist = minErrDist;
	
	public Scanner scanner;
	public Errors errors;

	public abstract class Thing{
    public String name;
    public float getPrice();
}

public class AtomicThing extends Thing{
    private final float price;
    public AtomicThing(float price){
        this.price = price;
    }
    @Override
    public float getPrice(){
        return price;
    }
}

public class ComplexThing extends Thing{
    private ArrayList<Thing> things = new ArrayList<>();
    private float price;
    public void addThing(Thing thing){
        things.add(thing);
    }
    @Override
    public float getPrice(){
        if (price == null){
            price = 0;
            for (Thing thing: things) {
                price += thing.getPrice();
            }
            price *= 1.2;
        }
        return price;
    }
public class PriceQuery{
}

}

HashMap<String,Thing> thingsMap = new HashMap<>();



	public Parser(Scanner scanner) {
		this.scanner = scanner;
		errors = new Errors();
	}

	void SynErr (int n) {
		if (errDist >= minErrDist) errors.SynErr(la.line, la.col, n);
		errDist = 0;
	}

	public void SemErr (String msg) {
		if (errDist >= minErrDist) errors.SemErr(t.line, t.col, msg);
		errDist = 0;
	}
	
	void Get () {
		for (;;) {
			t = la;
			la = scanner.Scan();
			if (la.kind <= maxT) {
				++errDist;
				break;
			}

			la = t;
		}
	}
	
	void Expect (int n) {
		if (la.kind==n) Get(); else { SynErr(n); }
	}
	
	boolean StartOf (int s) {
		return set[s][la.kind];
	}
	
	void ExpectWeak (int n, int follow) {
		if (la.kind == n) Get();
		else {
			SynErr(n);
			while (!StartOf(follow)) Get();
		}
	}
	
	boolean WeakSeparator (int n, int syFol, int repFol) {
		int kind = la.kind;
		if (kind == n) { Get(); return true; }
		else if (StartOf(repFol)) return false;
		else {
			SynErr(n);
			while (!(set[syFol][kind] || set[repFol][kind] || set[0][kind])) {
				Get();
				kind = la.kind;
			}
			return StartOf(syFol);
		}
	}
	
	void Recipes() {
		if (la.kind == 3 || la.kind == 8) {
			Object();
		} else if (la.kind == 10) {
			Price();
		} else SynErr(12);
		while (la.kind == 3 || la.kind == 8 || la.kind == 10) {
			if (la.kind == 3 || la.kind == 8) {
				Object();
			} else {
				Price();
			}
		}
	}

	void Object() {
		if (la.kind == 8) {
			Atom();
		} else if (la.kind == 3) {
			Complex();
		} else SynErr(13);
	}

	void Price() {
		Expect(10);
		Expect(3);
	}

	void Complex() {
		Expect(3);
		Expect(4);
		Object();
		if (la.kind == 5) {
			Get();
			Expect(1);
		}
		while (la.kind == 6) {
			Get();
			Object();
			if (la.kind == 5) {
				Get();
				Expect(1);
			}
		}
		Expect(7);
	}

	void Atom() {
		Expect(8);
		Expect(3);
		Expect(9);
		Expect(2);
	}



	public void Parse() {
		la = new Token();
		la.val = "";		
		Get();
		Recipes();
		Expect(0);

	}

	private static final boolean[][] set = {
		{_T,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x}

	};
} // end Parser


class Errors {
	public int count = 0;                                    // number of errors detected
	public java.io.PrintStream errorStream = System.out;     // error messages go to this stream
	public String errMsgFormat = "-- line {0} col {1}: {2}"; // 0=line, 1=column, 2=text
	
	protected void printMsg(int line, int column, String msg) {
		StringBuffer b = new StringBuffer(errMsgFormat);
		int pos = b.indexOf("{0}");
		if (pos >= 0) { b.delete(pos, pos+3); b.insert(pos, line); }
		pos = b.indexOf("{1}");
		if (pos >= 0) { b.delete(pos, pos+3); b.insert(pos, column); }
		pos = b.indexOf("{2}");
		if (pos >= 0) b.replace(pos, pos+3, msg);
		errorStream.println(b.toString());
	}
	
	public void SynErr (int line, int col, int n) {
		String s;
		switch (n) {
			case 0: s = "EOF expected"; break;
			case 1: s = "int expected"; break;
			case 2: s = "float expected"; break;
			case 3: s = "ident expected"; break;
			case 4: s = "\"{\" expected"; break;
			case 5: s = "\"x\" expected"; break;
			case 6: s = "\",\" expected"; break;
			case 7: s = "\"}\" expected"; break;
			case 8: s = "\"atom\" expected"; break;
			case 9: s = "\":\" expected"; break;
			case 10: s = "\"priceof\" expected"; break;
			case 11: s = "??? expected"; break;
			case 12: s = "invalid Recipes"; break;
			case 13: s = "invalid Object"; break;
			default: s = "error " + n; break;
		}
		printMsg(line, col, s);
		count++;
	}

	public void SemErr (int line, int col, String s) {	
		printMsg(line, col, s);
		count++;
	}
	
	public void SemErr (String s) {
		errorStream.println(s);
		count++;
	}
	
	public void Warning (int line, int col, String s) {	
		printMsg(line, col, s);
	}
	
	public void Warning (String s) {
		errorStream.println(s);
	}
} // Errors


class FatalError extends RuntimeException {
	public static final long serialVersionUID = 1L;
	public FatalError(String s) { super(s); }
}
